--- a/app/src/main/res/layout/chat_message_item.xml
+++ b/app/src/main/res/layout/chat_message_item.xml
@@ -2,35 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:id="@+id/messageLinearLayout"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_message">
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp">
 
-    <TextView
-        android:id="@+id/txtMsg"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/messageConstraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/quicksand_bold"
-        android:maxWidth="150dp"
-        android:text="Dónde andas"
-        android:textColor="@color/chat_background"
-        android:textSize="20sp" />
+        android:background="@drawable/rounded_message"
+        android:paddingRight="5dp">
 
-    <TextView
-        android:id="@+id/txtTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/txtMsg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:fontFamily="@font/quicksand_bold"
+            android:maxWidth="150dp"
+            android:text="Text example"
+            android:textColor="@color/chat_background"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        android:layout_gravity="bottom"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="5dp"
-        android:layout_weight="1"
-        android:fontFamily="@font/asap"
-        android:text="2:23 AM"
-        android:textColor="@color/detail_color_secondary"
-        android:textSize="12sp" />
+        <TextView
+            android:id="@+id/txtTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:fontFamily="@font/asap"
+            android:text="2:23 AM"
+            android:textColor="@color/detail_color_secondary"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/txtMsg"
+            app:layout_constraintTop_toBottomOf="@+id/txtMsg" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
