--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -33,7 +33,7 @@
             app:iconTint="@color/chat_background" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgProfilePicture"
+            android:id="@+id/imgContactProfilePicture"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="5dp"
@@ -63,7 +63,7 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/txtStatus"
+                android:id="@+id/txtContactStatus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -148,6 +148,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="@color/chat_color"
+            android:onClick="sendMessage"
             app:icon="@drawable/ic_send"
             app:iconGravity="textEnd"
             app:iconPadding="0dp"
