Message width arreglado
Corrección del width de los mensajes.

--- a/app/src/main/res/layout/chat_message_item.xml
+++ b/app/src/main/res/layout/chat_message_item.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/quicksand_bold"
-            android:maxWidth="150dp"
+            android:minWidth="75dp"
+            android:maxWidth="345dp"
             android:text="Text example"
             android:textColor="@color/chat_background"
             android:textSize="20sp"
