--- a/app/src/main/res/layout/chat_image_item.xml
+++ b/app/src/main/res/layout/chat_image_item.xml
@@ -40,7 +40,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/asap"
             android:text="3:25 AM"
-            android:textColor="@color/detail_color_secondary"
+            android:textColor="@color/purple_500"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
