--- a/app/src/main/res/layout/chat_card_item.xml
+++ b/app/src/main/res/layout/chat_card_item.xml
@@ -75,6 +75,7 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_marginEnd="10dp"
+                android:outlineProvider="none"
                 app:cardBackgroundColor="@color/detail_color_secondary"
                 app:cardCornerRadius="27dp"
                 app:cardElevation="0dp"
@@ -88,7 +89,8 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/asap"
                     android:gravity="center|center_vertical"
-                    android:text="+7"
+                    android:outlineProvider="none"
+                    android:text="1"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
 
