--- a/app/src/main/res/layout/chat_card_item.xml
+++ b/app/src/main/res/layout/chat_card_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
     android:background="@color/background"
     android:elevation="0dp"
     android:orientation="vertical">
@@ -19,9 +18,9 @@
         android:layout_marginBottom="4dp"
         android:background="#00FFFFFF"
         android:clickable="true"
-        android:focusable="true"
         app:cardBackgroundColor="#00FFFFFF"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        android:focusable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -29,24 +28,32 @@
             android:background="#00FFFFFF"
             android:backgroundTint="#00FFFFFF">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/userIcon"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/addChatIcon"
                 android:layout_width="55dp"
                 android:layout_height="55dp"
                 android:background="#00FFFFFF"
-                android:outlineProvider="background"
-                android:scaleType="centerCrop"
+                android:outlineProvider="none"
+                app:cardBackgroundColor="#00FFFFFF"
+                app:cardCornerRadius="100dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
-                app:srcCompat="@drawable/ic_profile_pic" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/userIcon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/user_icon"
+                    tools:ignore="ImageContrastCheck"
+                    tools:srcCompat="@tools:sample/avatars" />
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/chatName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="2dp"
                 android:layout_marginEnd="10dp"
                 android:fontFamily="@font/asap"
                 android:text="Bochin"
@@ -54,7 +61,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/chatTime"
-                app:layout_constraintStart_toEndOf="@+id/userIcon"
+                app:layout_constraintStart_toEndOf="@+id/addChatIcon"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -75,7 +82,6 @@
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_marginEnd="10dp"
-                android:outlineProvider="none"
                 app:cardBackgroundColor="@color/detail_color_secondary"
                 app:cardCornerRadius="27dp"
                 app:cardElevation="0dp"
@@ -89,8 +95,7 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/asap"
                     android:gravity="center|center_vertical"
-                    android:outlineProvider="none"
-                    android:text="1"
+                    android:text="+7"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
 
