--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtHanasu" />
+                app:layout_constraintTop_toBottomOf="@+id/txtViewAppName" />
 
             <TextView
                 android:id="@+id/txtInstruction"
@@ -128,7 +128,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />
 
             <TextView
-                android:id="@+id/txtHanasu"
+                android:id="@+id/txtViewAppName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/quicksand_bold"
