--- a/app/src/main/res/layout/activity_verify_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_verify_forgotten_password.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtInstruction2" />
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgViewMainLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -136,10 +136,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtHanasu" />
+        app:layout_constraintTop_toBottomOf="@+id/txtViewAppName" />
 
     <TextView
-        android:id="@+id/txtHanasu"
+        android:id="@+id/txtViewAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -150,5 +150,5 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/imgViewMainLogo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
