--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -70,7 +70,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/txtHanasu" />
+          app:layout_constraintTop_toBottomOf="@+id/txtViewAppName" />
 
       <TextView
           android:id="@+id/txtInstruction"
@@ -136,7 +136,7 @@
           app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />
 
       <ImageView
-          android:id="@+id/imgLogo"
+          android:id="@+id/imgViewMainLogo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="36dp"
@@ -147,7 +147,7 @@
           app:srcCompat="@mipmap/ic_main_logo_foreground" />
 
       <TextView
-          android:id="@+id/txtHanasu"
+          android:id="@+id/txtViewAppName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/quicksand_bold"
@@ -157,7 +157,7 @@
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+          app:layout_constraintTop_toBottomOf="@+id/imgViewMainLogo" />
 
       <Button
           android:id="@+id/btnSend"
