--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -24,7 +24,7 @@
         tools:ignore="DuplicateSpeakableTextCheck" />
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgViewMainLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -48,7 +48,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/imgViewMainLogo" />
 
     <TextView
         android:id="@+id/txtVerify"
