--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -54,7 +54,7 @@
         android:textColor="@color/instruction_color"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/imgViewMainLogo" />
 
     <TextView
         android:id="@+id/txtInstruction2"
@@ -67,20 +67,20 @@
         android:textColor="@color/important_color_primary"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/txtInstruction1"
-        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/imgViewMainLogo" />
 
     <ImageView
-        android:id="@+id/imgLogo"
+        android:id="@+id/imgViewMainLogo"
         android:layout_width="189dp"
         android:layout_height="205dp"
         android:contentDescription="@string/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtHanasu"
+        app:layout_constraintTop_toBottomOf="@+id/txtViewAppName"
         app:srcCompat="@mipmap/ic_main_logo_foreground" />
 
     <TextView
-        android:id="@+id/txtHanasu"
+        android:id="@+id/txtViewAppName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
