--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
         android:layout_height="900dp">
 
       <TextView
-          android:id="@+id/txtAccount"
+          android:id="@+id/txtViewForgotPassword"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="64dp"
@@ -44,7 +44,6 @@
           android:layout_marginEnd="40dp"
           android:fontFamily="@font/asap"
           android:minHeight="48dp"
-          android:onClick="changeToLoginActivity"
           android:text="@string/login"
           android:textColor="@color/white"
           android:textSize="16sp"
@@ -52,7 +51,7 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
-          app:layout_constraintStart_toEndOf="@+id/txtAccount"
+          app:layout_constraintStart_toEndOf="@+id/txtViewForgotPassword"
           app:layout_constraintTop_toBottomOf="@+id/btnSend"
           app:layout_constraintVertical_bias="0.0" />
 
@@ -169,7 +168,6 @@
           android:background="@drawable/round_button"
           android:backgroundTint="@color/purple_500"
           android:fontFamily="@font/quicksand_bold"
-          android:onClick="createAccount"
           android:text="@string/register_btn"
           android:textAllCaps="false"
           android:textSize="20sp"
@@ -186,7 +184,6 @@
           android:layout_marginTop="16dp"
           android:backgroundTint="@color/background"
           android:contentDescription="@string/register_btn"
-          android:onClick="changeToLoginActivity"
           app:icon="@mipmap/ic_return_foreground"
           app:iconSize="30dp"
           app:iconTint="@color/accent_color"
