--- a/app/src/main/res/layout/activity_verify_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_verify_forgotten_password.xml
@@ -14,7 +14,6 @@
         android:layout_marginStart="4dp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/asap"
-        android:onClick="sendPasswordEmail"
         android:text="@string/verify_resend"
         android:textColor="@color/resend_color"
         android:textSize="16sp"
@@ -47,7 +46,7 @@
         app:srcCompat="@mipmap/ic_main_logo_foreground" />
 
     <TextView
-        android:id="@+id/txtEmail"
+        android:id="@+id/txtViewEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -98,7 +97,6 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/background"
         android:contentDescription="@string/register_btn"
-        android:onClick="changeToLastActivity"
         app:icon="@mipmap/ic_return_foreground"
         app:iconSize="30dp"
         app:iconTint="@color/accent_color"
@@ -120,7 +118,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/txtViewEmail" />
 
     <TextView
         android:id="@+id/txtRestore"
