--- a/app/src/main/res/layout/activity_set_profile_info.xml
+++ b/app/src/main/res/layout/activity_set_profile_info.xml
@@ -9,16 +9,6 @@
     android:outlineProvider="paddedBounds"
     tools:context=".activity.welcome.SetProfileInfoActivity">
 
-    <LinearLayout
-        android:id="@+id/layoutPictureOptions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></LinearLayout>
-
     <EditText
         android:id="@+id/edtTxtProfileName"
         android:layout_width="0dp"
@@ -132,16 +122,14 @@
     <LinearLayout
         android:id="@+id/clickableContainer"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="#3E000000"
         android:clickable="false"
         android:elevation="10dp"
+        android:gravity="bottom"
         android:orientation="horizontal"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/layoutPictureOptions"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent"></LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
