--- a/app/src/main/res/layout/chat_image_item.xml
+++ b/app/src/main/res/layout/chat_image_item.xml
@@ -23,9 +23,13 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
-            android:background="@android:drawable/btn_star_big_on"
             android:clipToOutline="true"
             android:elevation="1dp"
+            android:maxWidth="300dp"
+            android:maxHeight="300dp"
+            android:minWidth="300dp"
+            android:minHeight="300dp"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
