--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -102,8 +102,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/chat_color"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -132,13 +132,17 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
-            android:layout_weight="1"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0"
             android:autofillHints=""
             android:background="@drawable/rounded_chat"
             android:ems="10"
             android:hint="@string/msg_hint"
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine"
+            android:maxWidth="260dp"
             android:paddingStart="10dp"
+            android:paddingBottom="0dp"
+            android:scrollHorizontally="false"
             android:textColor="@color/black"
             android:textColorHint="@color/black" />
 
