--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -119,6 +119,7 @@
             android:layout_marginEnd="2dp"
             android:layout_weight="1"
             android:backgroundTint="@color/chat_color"
+            android:onClick="pickPhotoFromGallery"
             app:icon="@drawable/ic_plus"
             app:iconGravity="textStart"
             app:iconSize="45dp"
